# Oblivion

./: .gitignore  CMakeLists.txt  OVMF_VARS.fd  README.md  build.py
cmake/: Toolchain.cmake
scripts/: elf_x86_64_efi.lds
src/: main.cc
